# neuro_dicom_parser

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  blank_user_options.ini  main.py  pyproject.toml
.github/workflows/: build.yml  docker.yml
neurodicomparser/: __main__.py  run.py
neurodicomparser/Processing/: classification.py  ct_sequence_processing.py  dicom_processing.py  mri_sequence_processing.py  segmentation.py
neurodicomparser/Processing/dicom/: anonymisation_verification.py  conversion_anonymised.py  conversion_custom.py  conversion_sectra.py  dicom_processing.py
neurodicomparser/Processing/identification/: classification.py  ct_sequence_processing.py  identification_process.py  mri_sequence_processing.py  segmentation.py
neurodicomparser/Utils/: OptionsConfiguration.py  dicom_utils.py  ensure_dcm2nii_present.py  ensure_models_present.py  image_utils.py  io_utils.py  utils.py
